[gd_scene load_steps=31 format=3 uid="uid://c35l7cxxgurie"]

[ext_resource type="Script" path="res://root.gd" id="1_882b2"]
[ext_resource type="Texture2D" uid="uid://dnrmr40amjl4i" path="res://art/W_key.png" id="2_hbnmh"]
[ext_resource type="Texture2D" uid="uid://cd2ra0ki4qht5" path="res://art/A_key.png" id="3_5hone"]
[ext_resource type="PackedScene" uid="uid://b87njudih7dx6" path="res://key_set.tscn" id="3_75buc"]
[ext_resource type="Texture2D" uid="uid://ctqkub1qos2ve" path="res://art/S_key.png" id="4_674ko"]
[ext_resource type="Texture2D" uid="uid://dmpnjlyr5ular" path="res://art/D_key.png" id="5_l2jmt"]
[ext_resource type="Texture2D" uid="uid://bxusp7huoqiwj" path="res://art/W_key_success.png" id="6_2ki7r"]
[ext_resource type="Texture2D" uid="uid://dhxv7wkigq53o" path="res://art/A_key_success.png" id="7_6nps8"]
[ext_resource type="Texture2D" uid="uid://daq5xjsr7t62n" path="res://art/S_key_success.png" id="8_1ad6c"]
[ext_resource type="Texture2D" uid="uid://coinx4bilu7cw" path="res://art/D_key_success.png" id="9_jwc20"]
[ext_resource type="Texture2D" uid="uid://11yfrotc8k6f" path="res://art/W_key_fail.png" id="10_gysvo"]
[ext_resource type="Texture2D" uid="uid://cw72nl0c4lkfx" path="res://art/A_key_fail.png" id="11_ovjt7"]
[ext_resource type="Texture2D" uid="uid://cn0ixb1jqvhji" path="res://art/S_key_fail.png" id="12_pradt"]
[ext_resource type="Texture2D" uid="uid://mk4spxcl0fub" path="res://art/D_key_fail.png" id="13_pq0ht"]
[ext_resource type="PackedScene" uid="uid://bgcrey6lr8xlt" path="res://player.tscn" id="14_bhjfg"]
[ext_resource type="PackedScene" uid="uid://dl7j40q2monf4" path="res://enemy.tscn" id="15_175gv"]
[ext_resource type="Texture2D" uid="uid://1jwjdru4mr77" path="res://art/background-Sheet.png" id="15_r3dek"]
[ext_resource type="StyleBox" uid="uid://3hhpn08mphay" path="res://resources/healthPanel.tres" id="15_vig78"]
[ext_resource type="AudioStream" uid="uid://c7wr6e6ra5e2a" path="res://art/keyClick.wav" id="18_rowhm"]
[ext_resource type="AudioStream" uid="uid://qnm61kp0qp2y" path="res://art/enemyDefeat.wav" id="19_kgrp2"]
[ext_resource type="AudioStream" uid="uid://dflguyq1n6hi7" path="res://art/crowdNoise.wav" id="21_xt76d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vbeh2"]
atlas = ExtResource("15_r3dek")
region = Rect2(0, 0, 1152, 350)

[sub_resource type="AtlasTexture" id="AtlasTexture_qng56"]
atlas = ExtResource("15_r3dek")
region = Rect2(1152, 0, 1152, 350)

[sub_resource type="AtlasTexture" id="AtlasTexture_62fap"]
atlas = ExtResource("15_r3dek")
region = Rect2(2304, 0, 1152, 350)

[sub_resource type="SpriteFrames" id="SpriteFrames_piehe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbeh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qng56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62fap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qng56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbeh2")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqdem"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5d0bh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c3e5a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bkws6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p178h"]

[node name="root" type="Node2D"]
script = ExtResource("1_882b2")
w_key = ExtResource("2_hbnmh")
a_key = ExtResource("3_5hone")
s_key = ExtResource("4_674ko")
d_key = ExtResource("5_l2jmt")
w_key_success = ExtResource("6_2ki7r")
a_key_success = ExtResource("7_6nps8")
s_key_success = ExtResource("8_1ad6c")
d_key_success = ExtResource("9_jwc20")
w_key_fail = ExtResource("10_gysvo")
a_key_fail = ExtResource("11_ovjt7")
s_key_fail = ExtResource("12_pradt")
d_key_fail = ExtResource("13_pq0ht")
Enemy = ExtResource("15_175gv")

[node name="Background" type="AnimatedSprite2D" parent="."]
position = Vector2(576, 176)
sprite_frames = SubResource("SpriteFrames_piehe")
frame = 4
frame_progress = 1.0

[node name="PlayerHealthPanel" type="Panel" parent="."]
offset_left = 112.0
offset_top = 288.0
offset_right = 280.0
offset_bottom = 328.0
theme_override_styles/panel = ExtResource("15_vig78")

[node name="EnemyHealthPanel" type="Panel" parent="."]
offset_left = 832.0
offset_top = 288.0
offset_right = 1008.0
offset_bottom = 328.0
theme_override_styles/panel = ExtResource("15_vig78")

[node name="RandKeyChangeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Player" parent="." instance=ExtResource("14_bhjfg")]
position = Vector2(192, 208)
damage_intake = 10

[node name="Player Health" type="Label" parent="."]
offset_left = 128.0
offset_top = 296.0
offset_right = 268.0
offset_bottom = 319.0
text = "Player Health: 100"

[node name="Enemy" parent="." instance=ExtResource("15_175gv")]
position = Vector2(1192, 208)

[node name="Enemy Health" type="Label" parent="."]
offset_left = 848.0
offset_top = 296.0
offset_right = 992.0
offset_bottom = 319.0
text = "Enemy Health: 100"

[node name="mainPanel" type="Panel" parent="."]
offset_top = 344.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Key Set" parent="mainPanel" instance=ExtResource("3_75buc")]
position = Vector2(328, 176)

[node name="Key Set2" parent="mainPanel" instance=ExtResource("3_75buc")]
position = Vector2(480, 176)

[node name="Key Set3" parent="mainPanel" instance=ExtResource("3_75buc")]
position = Vector2(632, 176)

[node name="Key Set4" parent="mainPanel" instance=ExtResource("3_75buc")]
position = Vector2(784, 176)

[node name="GetReady" type="Label" parent="mainPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Sequence" type="Label" parent="mainPanel"]
layout_mode = 0
offset_left = 472.0
offset_top = 48.0
offset_right = 637.0
offset_bottom = 93.0
theme_override_font_sizes/font_size = 32
text = "Sequence: "

[node name="Keys" type="Label" parent="mainPanel"]
layout_mode = 0
offset_left = 264.0
offset_top = 248.0
offset_right = 370.0
offset_bottom = 271.0
text = "Keys Pressed:"

[node name="HBoxContainer" type="HBoxContainer" parent="mainPanel"]
layout_mode = 0
offset_left = 416.0
offset_top = 240.0
offset_right = 672.0
offset_bottom = 272.0
alignment = 1

[node name="user_key1" type="Node2D" parent="mainPanel/HBoxContainer"]
position = Vector2(32, 16)

[node name="user_key2" type="Node2D" parent="mainPanel/HBoxContainer"]
position = Vector2(96, 16)

[node name="user_key3" type="Node2D" parent="mainPanel/HBoxContainer"]
position = Vector2(160, 16)

[node name="user_key4" type="Node2D" parent="mainPanel/HBoxContainer"]
position = Vector2(224, 16)

[node name="Timer" type="Timer" parent="mainPanel/HBoxContainer"]
wait_time = 0.5

[node name="sequenceComplete" type="Label" parent="mainPanel"]
visible = false
layout_mode = 0
offset_left = 856.0
offset_top = 56.0
offset_right = 1003.0
offset_bottom = 79.0
text = "Attack Summoned!"

[node name="Score" type="Label" parent="mainPanel"]
layout_mode = 0
offset_left = 64.0
offset_top = 23.0
offset_right = 280.0
offset_bottom = 68.0
theme_override_font_sizes/font_size = 32
text = "Score: 000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeLeft" type="Label" parent="mainPanel"]
layout_mode = 0
offset_left = 912.0
offset_top = 16.0
offset_right = 1088.0
offset_bottom = 39.0
text = "Time Left: "

[node name="Countdown" type="Label" parent="mainPanel/TimeLeft"]
layout_mode = 0
offset_left = 91.0
offset_right = 131.0
offset_bottom = 23.0
text = "0:00"

[node name="gameOverPanel" type="Panel" parent="."]
offset_left = 344.0
offset_top = 80.0
offset_right = 736.0
offset_bottom = 392.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bqdem")

[node name="Restart" type="Button" parent="gameOverPanel"]
layout_mode = 0
offset_left = 152.0
offset_top = 144.0
offset_right = 248.0
offset_bottom = 178.0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_5d0bh")
theme_override_styles/hover = SubResource("StyleBoxFlat_c3e5a")
text = "Restart"

[node name="Quit" type="Button" parent="gameOverPanel"]
layout_mode = 0
offset_left = 152.0
offset_top = 192.0
offset_right = 248.0
offset_bottom = 226.0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_bkws6")
theme_override_styles/hover = SubResource("StyleBoxFlat_p178h")
text = "Quit"

[node name="GameOver" type="Label" parent="gameOverPanel"]
layout_mode = 0
offset_left = 104.0
offset_top = 40.0
offset_right = 294.0
offset_bottom = 85.0
theme_override_font_sizes/font_size = 32
text = "Game Over!
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalScore" type="Label" parent="gameOverPanel"]
layout_mode = 0
offset_left = 72.0
offset_top = 96.0
offset_right = 211.0
offset_bottom = 130.0
theme_override_colors/font_color = Color(0, 0.870588, 0.623529, 1)
theme_override_font_sizes/font_size = 24
text = "Final Score: "

[node name="EnemySpawn" type="Marker2D" parent="."]
position = Vector2(1192, 208)

[node name="KeyClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_rowhm")

[node name="EnemyDefeat" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("19_kgrp2")

[node name="CrowdNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("21_xt76d")
pitch_scale = 0.89
attenuation = 1.56917

[node name="GameTimer" type="Timer" parent="."]
wait_time = 120.0

[connection signal="timeout" from="RandKeyChangeTimer" to="." method="_on_rand_key_change_timer_timeout"]
[connection signal="tree_exited" from="Enemy" to="." method="_on_enemy_tree_exited"]
[connection signal="timeout" from="mainPanel/HBoxContainer/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="gameOverPanel/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="gameOverPanel/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
